--- a/navigation/index.html
+++ b/navigation/index.html
@@ -1,115 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- this is the structure of a comment block in html files 
-         everything in this structure is not considered part of any 
-         content of your webpage
-
-         Most tags in html are done in pairs; opening and closing tags
-         The opening tag indicates the tag instruction to the browser.
-         The closing tag terminates the tag block. The closing tag has the same
-         name as the opening tag with the addition of a slash (/) before the tag name.
-
-         On the html tag has a parameter to indicating the language of the text.
-    -->
 
 <head>
-    <!-- This is a place where you can code supports for the browser to use 
-         in interpreting the web file. The items within this section are NOT content 
-    -->
 
-    <title>On the page title</title>
+    <title>Navigational Techniques</title>
     <meta name="author" content="Ma. Alexa Naomi Ng">
     <meta charset="utf-8">
-
-    <!-- This is a universal type set that covers almost all the character and 
-         symbols in the world
-         https://www.w3schools.com/tags/tags-meta.asp 
-    -->
 
 </head>
 
 <body>
-    <!-- Header Tags
-            h1 thru h6
-            these are title tags
-            h1 - largest title, h6 - is the smallest
-            all of these tags have some built in formatting-->
-    <h1>Basic HTML Tags</h1>
-    <h3>Paragraph Tag</h3>
-    <!-- This is the coding block for your content on your webpage -->
+    <header>
+        <h1>Navigational Techniques</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Creating Navigational Links within a web site</h2>
+            <p>There are several techniques to navigating within a web site. The semantic tag for navigation is the
+                &lt;nav&gt; tag.
+                You can navigate through your website by using relative addressing. For our examples we will use the
+                unordered list tag &(lt;UL&gt;). Our examples will consist of:
 
-    <p> The paragraph tag is a block tag. A block tag begins a new line
-        in your displayed web page on the browser. The browser does NOT display
-        your context in the physical style of how you have entered your code in your
-        html file.
-    </p>
-
-    <p> This is my second paragraph on the displayed browser page. It will start a
-        new line.
-    </p>
-
-    <!--If you wish to use a component of a reserved tag (or the whole tag) you would 
-        be in trouble just using the tag
-        YOU CAN USE SPECIAL CHARACTERS STRINGS TO REPRESENT COMPONENTS OF A TAG.  
-        such as the < (&lt) and the > (&gt) symbol-->
-    <h3>List Tags &lt;OL&gt; and &lt;UL&gt;</h3>
-
-
-    <!-- create an ordered list (OL) tag
-         create an unordered list (UL) tag
-         items in the list are (LI) tag-->
-    <ol>
-        <li>Add extension Live Server for Go Live</li>
-        <li>Close and reopen VS-Code</li>
-        <li>Look at the bottom right corner on the blue status line for Go Live</li>
-        <li>This will run your page from VS-Code</li>
-        <li>Alter your page and save the file, your browser will automatically
-            be updated
-        </li>
-
-    </ol>
-
-
-    <ul>
-        <li>This is an unordered list</li>
-        <li>Default display is a bulleted list</li>
-        <li>We will see later how do we move these bullets</li>
-    </ul>
-
-    <!--This is an anchor tag, often reffered to as the link tag.
-        One should not use the term link tag because there is actually a <link> tag
-        used in the <head> function.
-        This tag can take yyou to a different location whether it be a different
-        website, different page in the current website, or a different position on
-        the current page.
-    
-        Parameters HREF points to the desired location
-                   TARGET indicates the browser page display option (new tab, position)
-                    - default is the same page
-                    - _blank will use a new window tab -->
-
-    <h3>Anchor Tag</h3>
-
-    <a href="http://www.nait.ca" target="_blank">Go to NAIT</a>
-
-    <!--another way to display an image is using the figure tag along with the figcaption tag
-    the figure tag will indent your image while the figcaption tag will allow you to place a text line with your image
-    the figcaption is optional-->
-
-    <figure>
-
-        <img src="img/photoshop.jpg" alt="photoshop symbol" title="This is a tool-tip">
-
-        <figcaption>Note where this caption text for the image appears.</figcaption>
-
-    </figure>
-
-    <!--using an image anchor for your page-->
-
-    <a href="https://mng29.dmitstudent.ca/ireland" target=_blank>
-
-        <img src="img/photoshop.jpg" alt="photoshop symbol" title="Go to my web site sample">
-    </a>
+            <ul>
+                <li>page to page within the same folder</li>
+                <li>page to page between folders</li>
+                <li>staying on the current page</li>
+                <li>going to a specific place on the current page (on page navigation)</li>
+                <li>going to a specific place on the another page</li>
+            </ul>
+            </p>
+            <p>Navigational menus are placed in your &lt;header&gt; semantic area. They may also be placed in your
+                &lt;footer&gt; area</p>
+        </section>
+    </main>
 </body>
 
 
