updated files to review

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -12,6 +12,13 @@
 <body>
     <header>
         <h1>Navigational Techniques</h1>
+        <nav>
+            <h2>Nav tag titles are optional</h2>
+            <ul>
+                <li><a href="#">Home Page/Landing Pge</a></li>
+                <li><a href="apple-pie.html">Apple Pie Page</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
