demo review on navigation

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -17,11 +17,13 @@
             <ul>
                 <li><a href="#">Home Page/Landing Pge</a></li>
                 <li><a href="apple-pie.html">Apple Pie Page</a></li>
+                <li><a href="demo-table/table-demo.html">Table Demo</a> </li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
+
             <h2>Creating Navigational Links within a web site</h2>
             <p>There are several techniques to navigating within a web site. The semantic tag for navigation is the
                 &lt;nav&gt; tag.
@@ -33,13 +35,24 @@
                 <li>page to page between folders</li>
                 <li>staying on the current page</li>
                 <li>going to a specific place on the current page (on page navigation)</li>
-                <li>going to a specific place on the another page</li>
+                <li>going to a specific place on the another page(<a href="apple-pie.html#apples">Choosing Apples</a>)
+                </li>
             </ul>
             </p>
             <p>Navigational menus are placed in your &lt;header&gt; semantic area. They may also be placed in your
                 &lt;footer&gt; area</p>
         </section>
     </main>
+    <footer>
+        <nav>
+            <h2>Site Map</h2>
+            <ul>
+                <li><a href="#">Home Page/Landing Pge</a></li>
+                <li><a href="apple-pie.html">Apple Pie Page</a></li>
+                <li><a href="demo-table/table-demo.html">Table Demo</a> </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 
